code25_all/scala/17359204.txt
scala> List( List( (1,"123"), (1,"abc")), List( (45, "qwer")) ).flatMap{ case (k,v) => (v,k) }
<console>:16: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: List[(Int, java.lang.String)]
       List( List( (1,"123"), (1,"abc")), List( (45, "qwer")) ).flatMap{ case (k,v) => (v,k) }
                                                                              ^
<console>:16: error: not found: value v
       List( List( (1,"123"), (1,"abc")), List( (45, "qwer")) ).flatMap{ case (k,v) => (v,k) }
                                                                                        ^
<console>:16: error: not found: value k
       List( List( (1,"123"), (1,"abc")), List( (45, "qwer")) ).flatMap{ case (k,v) => (v,k) }
                                                                                      ^

